contains the basic layout and dummytext. still needs images to add

--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Project eden</title>
+    <title>Project-Eden</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
     <link rel="stylesheet" href="Assets/CSS/Stylesheet_Aaron.css">
 </head>
 
 <body>
+    <div class="robotics">
+        <div class="container">
+            <div class="content-box-1">
+                <h1>Lorem ipsum dolor.</h1>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil exercitationem similique temporibus quasi voluptatum quos doloremque quis corporis molestias officia ut quidem, dolore voluptates, dolorum praesentium iste! Sit explicabo, dolores, minus eaque ex soluta voluptas eveniet libero laborum facere corporis, molestiae, natus perferendis? Illum, voluptatum vero hic ut assumenda commodi?</p>
+            </div>
+            <div class="content-box-2">
+                <h1>Lorem ipsum dolor.</h1>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil exercitationem similique temporibus quasi voluptatum quos doloremque quis corporis molestias officia ut quidem, dolore voluptates, dolorum praesentium iste! Sit explicabo, dolores, minus eaque ex soluta voluptas eveniet libero laborum facere corporis, molestiae, natus perferendis? Illum, voluptatum vero hic ut assumenda commodi?</p>
+            </div>
+            <div class="img-box-2"></div>
+            <div class="img-box-1"></div>
+        </div>
+        <div class="content-box">
+            <h1>Drones</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit explicabo facilis ipsa, nemo quasi a expedita blanditiis iure sed quibusdam voluptatum itaque. Sunt fugit explicabo delectus consectetur veniam, suscipit perspiciatis hic amet alias temporibus, libero fugiat nesciunt magni maxime eum provident aperiam minima molestiae debitis sapiente officia quibusdam architecto corporis voluptatum! Numquam pariatur accusantium saepe animi, recusandae minus inventore, odit.</p>
+            <h1>Delivery</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit explicabo facilis ipsa, nemo quasi a expedita blanditiis iure sed quibusdam voluptatum itaque. Sunt fugit explicabo delectus consectetur veniam, suscipit perspiciatis hic amet alias temporibus, libero fugiat nesciunt magni maxime eum provident aperiam minima molestiae debitis sapiente officia quibusdam architecto corporis voluptatum! Numquam pariatur accusantium saepe animi, recusandae minus inventore, odit.</p>
 
-    <div class="container">
+
+        </div>
     </div>
 
 </body></html>
