--- a/index.html
+++ b/index.html
@@ -4,31 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Project-Eden</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded|Roboto|Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="Assets/CSS/Stylesheet_Aaron.css">
 </head>
 
 <body>
-    <div class="robotics">
+    <div class="robotics" id="Robotics">
         <div class="container">
             <div class="content-box-1">
-                <h1>Lorem ipsum dolor.</h1>
+                <h1>Our department</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil exercitationem similique temporibus quasi voluptatum quos doloremque quis corporis molestias officia ut quidem, dolore voluptates, dolorum praesentium iste! Sit explicabo, dolores, minus eaque ex soluta voluptas eveniet libero laborum facere corporis, molestiae, natus perferendis? Illum, voluptatum vero hic ut assumenda commodi?</p>
+                <p>We are a team of industry professionals with a genuine passion for technology and years of engineering experience. We are dedicated to delivering ground-breaking solutions for new aerial exploration through our market-leading quadcopter and camera drone technology. Project eden is headquartered in #########. Explore our camera drone and aerial photography systems online, and contact our team today to talk more about smart drone technology and products!
+
+                </p>
             </div>
             <div class="content-box-2">
-                <h1>Lorem ipsum dolor.</h1>
+                <h1>Changing Your Idea of What Robots Can Do.</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil exercitationem similique temporibus quasi voluptatum quos doloremque quis corporis molestias officia ut quidem, dolore voluptates, dolorum praesentium iste! Sit explicabo, dolores, minus eaque ex soluta voluptas eveniet libero laborum facere corporis, molestiae, natus perferendis? Illum, voluptatum vero hic ut assumenda commodi?</p>
+                <p>We use sensor-based controls and computation to unlock the capabilities of complex mechanisms. Our world-class development teams take projects from initial concept to proof-of-principle prototyping to build-test-build engineering, to field testing and low-rate production.
+                </p>
             </div>
             <div class="img-box-2"></div>
             <div class="img-box-1"></div>
         </div>
         <div class="content-box">
-            <h1>Drones</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit explicabo facilis ipsa, nemo quasi a expedita blanditiis iure sed quibusdam voluptatum itaque. Sunt fugit explicabo delectus consectetur veniam, suscipit perspiciatis hic amet alias temporibus, libero fugiat nesciunt magni maxime eum provident aperiam minima molestiae debitis sapiente officia quibusdam architecto corporis voluptatum! Numquam pariatur accusantium saepe animi, recusandae minus inventore, odit.</p>
-            <h1>Delivery</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit explicabo facilis ipsa, nemo quasi a expedita blanditiis iure sed quibusdam voluptatum itaque. Sunt fugit explicabo delectus consectetur veniam, suscipit perspiciatis hic amet alias temporibus, libero fugiat nesciunt magni maxime eum provident aperiam minima molestiae debitis sapiente officia quibusdam architecto corporis voluptatum! Numquam pariatur accusantium saepe animi, recusandae minus inventore, odit.</p>
+            <h1 class="title-content">Agras MG-1P series</h1>
+            <img class="img-left" src="Assets/IMG/drone.jpg" alt="drone-image">
+            <p class="p-left">With eight rotors, MG-1P Series Agriculture Drones employ advanced propulsion and control algorithms to ensure flight safety even if one arm or motor breaks during flight. The motor drive system features a redundant communication mechanism that allows the system to reroute control signals during operation. <br><br>
+                A single MG-1P controller can control up to five MG-1P aircrafts simultaneously. This new intelligent remote controller extends the control range to up to 3 km[1] and supports high-resolution video transmission within that range, ensuring flight safety.
+            </p>
+            <h1>Spot</h1>
+            <img class="img-right" src="Assets/IMG/robot.jpg" alt="drone-image">
+            <p class="p-right">Spot is a four-legged robot designed for indoor and outdoor operation. It has been the breeding ground for a new approach to dynamic robot control that brings true autonomy within reach.
+                <br>
+                Spot is electrically powered and hydraulically actuated. It senses its rough-terrain environment using LIDAR and stereo vision in conjunction with a suite of on-board sensors to maintain balance and negotiate rough terrain. It carries a 23 kg payload and operates for 45 minutes on a battery charge.</p>
+
+
 
 
         </div>
